--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#ff9800</color>
+    <color name="colorPrimaryDark">#c66900</color>
+    <color name="colorAccent">#ffc947</color>
+
+    <!--Common colors-->
+    <color name="bg_splash">#FFFFFF</color>
+    <color name="page_bg">#F7F5F6</color>
+    <color name="page_bg_dim">#FAFAFA</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="red">#EF5350</color>
+    <color name="transparent_black">#99000000</color>
+    <color name="transparent_white">#AAFFFFFF</color>
+    <color name="yellow">#d0d001</color>
+    <color name="green">#00BF9A</color>
+    <color name="blue">#1976D2</color>
+    <color name="orange">#FF8A65</color>
+    <color name="gray">#CFD8DC</color>
+    <color name="purple">#7B1FA2</color>
+    <color name="imgPlaceholder">#ffffff</color>
+    <color name="fullTransparent">#00000000</color>
+    <color name="hint_color">#C1C7DE</color>
+    <color name="dark_blue">#1A237E</color>
+    <color name="light_green">#69F0AE</color>
+    <color name="light_gray">#E0E0E0</color>
+
+    <color name="default_background">#EEEEEE</color>
+
+
+    <color name="trans">#80000000</color>
+    <color name="tran">#50000000</color>
+    <color name="detailsToolbar">#55000000</color>
+
+    <color name="notification_card_bg">#EFEFEF</color>
+
+    <color name="title_color">#818181</color>
+    <color name="toolbar_boarder">#e5e6ea</color>
+    <color name="registration_main_color">#EABE7C</color>
+    <color name="registration_button_color">#70AE6E</color>
+
 </resources>
+
