Login+RegScreen+FirebaseAuth

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,38 +16,17 @@
         android:fontFamily="@font/rubik_bold"
         android:gravity="top"
         android:hint="@string/registration_name_text_view"
-        android:text="@string/registration_text_view"
+        android:text="@string/login_text"
         android:textAppearance="@style/RegistrationTheme"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/registration_name_edit_text"
-        android:layout_width="380dp"
-        android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
-        android:backgroundTint="@color/registration_main_color"
-        android:ems="10"
-        android:fontFamily="@font/rubik"
-        android:hint="@string/registration_name_text_view"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:lineHeight="24sp"
-        android:shadowColor="@color/registration_main_color"
-        android:textColorHint="@color/registration_main_color"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registration_text_view"
-        tools:targetApi="p" />
 
     <EditText
         android:id="@+id/login_email_edit_text"
         android:layout_width="380dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="150dp"
         android:backgroundTint="@color/registration_main_color"
         android:ems="10"
         android:fontFamily="@font/rubik"
@@ -59,7 +38,7 @@
         android:textColorHint="@color/registration_main_color"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registration_name_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/registration_text_view"
         tools:targetApi="p" />
 
     <EditText
@@ -83,34 +62,13 @@
         app:layout_constraintTop_toBottomOf="@+id/login_email_edit_text"
         tools:targetApi="p" />
 
-    <EditText
-        android:id="@+id/registration_password_repeat_edit_text"
-        android:layout_width="380dp"
-        android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
-        android:backgroundTint="@color/registration_main_color"
-        android:ems="10"
-        android:fontFamily="@font/rubik"
-        android:hint="@string/registration_password_repeat_text_view"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:lineHeight="24sp"
-        android:shadowColor="@color/registration_main_color"
-        android:textColorHint="@color/registration_main_color"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_password_edit_text"
-        tools:targetApi="p" />
-
     <Button
         android:id="@+id/login_button"
         android:layout_width="360dp"
         android:layout_height="50dp"
         android:background="@drawable/round_corner"
         android:fontFamily="@font/rubik"
-        android:text="@string/registration_button_text"
+        android:text="@string/login_button"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -118,25 +76,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registration_password_repeat_edit_text"
-        app:layout_constraintVertical_bias="0.19999999" />
-
-    <TextView
-        android:id="@+id/registration_already_have_acc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:autoLink="all"
-        android:clickable="true"
-        android:focusable="true"
-        android:fontFamily="@font/rubik"
-        android:linksClickable="true"
-        android:selectAllOnFocus="true"
-        android:text="@string/registration_have_account"
-        android:textColor="@color/registration_main_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/login_password_edit_text" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
