--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -56,5 +56,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/splash_app_description" />
+        app:layout_constraintTop_toBottomOf="@+id/splash_app_description"
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
