Auth Fully completed. Nav bar added. Fully navigatable. RV for home+notifications+courses+logout functionality

--- a/app/src/main/res/layout/activity_splash_afterload.xml
+++ b/app/src/main/res/layout/activity_splash_afterload.xml
@@ -5,7 +5,7 @@
     android:id="@+id/splashLayoutAfter"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashActivity">
+    tools:context=".activities.SplashActivity">
 
     <TextView
         android:id="@+id/splash_text_view"
