--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,25 +2,25 @@
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/home_button"
+        android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
         android:visible="true"
         android:orderInCategory="1"
         tools:ignore="MenuTitle" />
     <item
-        android:id="@+id/courses_button"
+        android:id="@+id/nav_courses"
         android:icon="@drawable/ic_courses"
         android:visible="true"
         android:orderInCategory="2"
         tools:ignore="MenuTitle" />
     <item
-        android:id="@+id/notification_button"
+        android:id="@+id/nav_notifications"
         android:icon="@drawable/ic_notifications"
         android:visible="true"
         android:orderInCategory="3"
         tools:ignore="MenuTitle" />
     <item
-        android:id="@+id/profile_button"
+        android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
         android:visible="true"
         android:orderInCategory="4"
