--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,6 @@
         <item>@font/rubik</item>
         <item>@font/rubik_bold</item>
         <item>@font/rubik_light</item>
+        <item>@font/rubik_medium</item>
     </array>
 </resources>
