--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -9,7 +9,11 @@
         android:id="@+id/nav_home"
         android:name="dev.bonch.kodik.fragments.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_courses_card"
+            app:destination="@id/nav_courses_card" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_courses"
@@ -28,5 +32,10 @@
         android:name="dev.bonch.kodik.fragments.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/nav_courses_card"
+        android:name="dev.bonch.kodik.fragments.LessonCardFragment"
+        tools:layout="@layout/fragment_lesson_card"/>
 
 </navigation>
