--- a/app/src/main/res/drawable/ic_open_theme.xml
+++ b/app/src/main/res/drawable/ic_open_theme.xml
@@ -7,5 +7,5 @@
       android:pathData="M22.5,22.5m-21,0a21,21 0,1 1,42 0a21,21 0,1 1,-42 0"
       android:strokeWidth="3"
       android:fillColor="#ffffff"
-      android:strokeColor="@color/colorPrimary"/>
+      android:strokeColor="#F57C00"/>
 </vector>
