--- a/app/src/main/res/layout/fragment_themes_chair.xml
+++ b/app/src/main/res/layout/fragment_themes_chair.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/rubik_bold"
         android:gravity="top"
-        android:text="@string/notifications_title"
+        android:text="@string/themes_of_course"
         android:textAppearance="@style/RegistrationTheme"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,6 +22,7 @@
         android:id="@+id/lesson_list_recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
