--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -9,7 +9,11 @@
         android:id="@+id/nav_home"
         android:name="dev.bonch.kodik.fragments.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_fragment_chair"
+            app:destination="@id/nav_fragment_chair" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_courses"
@@ -40,8 +44,8 @@
 
     <fragment
         android:id="@+id/nav_fragment_chair"
-        android:name="dev.bonch.kodik.fragments.LessonChairFragment"
-        tools:layout="@layout/fragment_lesson_chair">
+        android:name="dev.bonch.kodik.fragments.ThemesChairFragment"
+        tools:layout="@layout/fragment_themes_chair">
         <action
             android:id="@+id/action_nav_fragment_chair_to_nav_courses_card"
             app:destination="@id/nav_courses_card" />
