--- a/app/src/main/res/layout/item_trophies.xml
+++ b/app/src/main/res/layout/item_trophies.xml
@@ -19,12 +19,14 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/home_course_card"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="95dp"
         app:cardBackgroundColor="#C4C4C4"
         app:cardCornerRadius="20dp"
         app:cardElevation="0dp"
         android:layout_marginBottom="16dp"
+        app:layout_constraintWidth_percent="0.91"
+        app:layout_constraintWidth_max="360dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
