--- a/app/src/main/res/layout/item_lesson_card_theory.xml
+++ b/app/src/main/res/layout/item_lesson_card_theory.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="60dp"
+    app:cardCornerRadius="20dp"
     app:cardElevation="8dp">
 
 
@@ -41,7 +42,7 @@
 
             <Button
                 android:id="@+id/next_lesson_button"
-                android:layout_width="360dp"
+                android:layout_width="328dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="30dp"
