--- a/app/src/main/res/layout/fragment_classes_chair.xml
+++ b/app/src/main/res/layout/fragment_classes_chair.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/courses_text_view"
+        android:id="@+id/title_classes_chair"
         android:layout_width="330dp"
         android:layout_height="34dp"
         android:layout_marginTop="15dp"
@@ -26,6 +26,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/courses_text_view" />
+        app:layout_constraintTop_toBottomOf="@+id/title_classes_chair" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
