--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -39,8 +39,8 @@
 
     <fragment
         android:id="@+id/nav_courses_card"
-        android:name="dev.bonch.kodik.fragments.LessonCardFragment"
-        tools:layout="@layout/fragment_lesson_card"/>
+        android:name="dev.bonch.kodik.fragments.LessonPagerCardFragment"
+        tools:layout="@layout/fragment_lesson_pager_card"/>
 
     <fragment
         android:id="@+id/nav_fragment_chair"
@@ -53,8 +53,8 @@
 
     <fragment
         android:id="@+id/nav_fragment_class_cards"
-        android:name="dev.bonch.kodik.fragments.ClassCardsFragment"
-        tools:layout="@layout/fragment_class_cards">
+        android:name="dev.bonch.kodik.fragments.LessonsCardsFragment"
+        tools:layout="@layout/fragment_lessons_cards">
         <action
             android:id="@+id/action_nav_fragment_class_cards_to_nav_courses_card"
             app:destination="@id/nav_courses_card" />
