--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,12 +13,12 @@
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/profile_text_view"
@@ -38,6 +37,7 @@
                     android:layout_width="156dp"
                     android:layout_height="156dp"
                     android:layout_marginTop="21dp"
+                    android:contentDescription="Avatar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/profile_text_view" />
@@ -70,10 +70,11 @@
 
                 <TextView
                     android:id="@+id/profile_my_trophy"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="18dp"
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/rubik_medium"
+                    android:gravity="center"
                     android:text="@string/profile_my_trophy"
                     android:textColor="@color/black"
                     android:textSize="14sp"
@@ -93,10 +94,11 @@
 
                 <TextView
                     android:id="@+id/profile_data"
-                    android:layout_width="58dp"
-                    android:layout_height="14dp"
-                    android:layout_marginTop="18dp"
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/rubik_medium"
+                    android:gravity="center"
                     android:text="@string/profile_data"
                     android:textColor="@color/dark_gray"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -117,10 +119,9 @@
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/profile_container"
-        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        />
+        android:layout_marginTop="15dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
