--- a/app/src/main/res/layout/fragment_profile_trophy.xml
+++ b/app/src/main/res/layout/fragment_profile_trophy.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/trophies_recycler_view"
+    android:overScrollMode="never"
     tools:listitem="@layout/item_trophies"
     >
 </androidx.recyclerview.widget.RecyclerView>
