--- a/app/src/main/res/layout/item_lesson_card_theory.xml
+++ b/app/src/main/res/layout/item_lesson_card_theory.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:hint="Здесь бы мог быт ваш заголовок"
+                android:layout_marginRight="16dp"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/rubik_bold"
                 android:textColor="#000000"
@@ -35,6 +35,7 @@
                 android:minHeight="270dp"
                 android:hint="А здесь - текст"
                 android:layout_marginStart="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/rubik"
                 android:text="Test text"
