--- a/app/src/main/res/layout/item_home_courses.xml
+++ b/app/src/main/res/layout/item_home_courses.xml
@@ -31,6 +31,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_course_title" />
+        app:layout_constraintTop_toBottomOf="@+id/home_course_title">
+
+        <ImageView
+            android:id="@+id/home_course_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
