--- a/app/src/main/res/layout/activity_splash_afterload.xml
+++ b/app/src/main/res/layout/activity_splash_afterload.xml
@@ -26,7 +26,7 @@
         android:id="@+id/splash_intro"
         android:layout_width="328dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/rubik"
         android:gravity="center_horizontal"
         android:lineHeight="24dp"
@@ -74,5 +74,14 @@
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/splash_reg_button" />
+
+    <ImageView
+        android:id="@+id/splash_image_view"
+        android:layout_width="222dp"
+        android:layout_height="238dp"
+        app:layout_constraintBottom_toTopOf="@+id/splash_reg_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/splash_intro"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
