--- a/app/src/main/res/layout/item_trophies.xml
+++ b/app/src/main/res/layout/item_trophies.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/home_course_card"
+        android:id="@+id/trophy_card"
         android:layout_width="0dp"
         android:layout_height="95dp"
         app:cardBackgroundColor="#C4C4C4"
@@ -30,6 +30,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/trophy_title" />
+        app:layout_constraintTop_toBottomOf="@+id/trophy_title">
+
+        <ImageView
+            android:id="@+id/trophy_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
